--- a/Rascunhos/terminal da aliança.html
+++ b/Rascunhos/terminal da aliança.html
@@ -44,7 +44,11 @@
     <!-- This content will only be shown if the user is logged in -->
     <div id="main-content" class="hidden">
         <header class="text-center mb-8 flex justify-between items-center">
-            <div></div>
+            <div>
+                <a href="../index.html" class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded transition-colors duration-300">
+                    &larr; Voltar ao Portal
+                </a>
+            </div>
             <div>
                 <h1 class="text-4xl md:text-5xl font-bold text-red-600 font-roboto-mono tracking-wider animate-pulse">TERMINAL DA ALIANÇA</h1>
                 <p id="user-display" class="text-lg text-gray-500">CONEXÃO ESTABELECIDA</p>
