--- a/main.html
+++ b/main.html
@@ -113,6 +113,12 @@
                 <p class="text-gray-400 mb-6 flex-grow">Utilize este grimório para rolar dados, adicionar valores personalizados e consultar as estatísticas arcanas de seus lançamentos.</p>
                 <a href="Dados/dados.html" class="btn-theme mt-auto block w-full text-center bg-indigo-700 hover:bg-indigo-600 text-white font-semibold py-3 rounded-md">Rolar os Dados</a>
             </div>
+            
+            <div class="resource-card rounded-lg p-6 flex flex-col">
+                <h2 class="text-2xl font-bold text-white mb-3">Arquivos de Kuar-Tor</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acesse o terminal de dados recuperado para pesquisar informações cruciais sobre as criaturas, locais e anomalias da ilha.</p>
+                <a href="Rascunhos/computador_de_kuar_tor.html" class="btn-theme mt-auto block w-full text-center bg-gray-600 hover:bg-gray-500 text-white font-semibold py-3 rounded-md">Acessar Arquivos</a>
+            </div>
 
             <div class="resource-card rounded-lg p-6 flex flex-col relative overflow-hidden">
                 <h2 class="text-2xl font-bold text-white mb-3">Manutenção</h2>
