--- a/main.html
+++ b/main.html
@@ -130,6 +130,12 @@
                 <img src="faixa.png" alt="Under Construction Tape" class="tape-overlay tape-overlay-4">
             </div>
 
+            <div class="resource-card rounded-lg p-6 flex flex-col">
+                <h2 class="text-2xl font-bold text-white mb-3">Santuário</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acesse o santuário para comprar e vender itens, e colaborar com outros jogadores.</p>
+                <a href="santuario.html" class="btn-theme mt-auto block w-full text-center bg-purple-700 hover:bg-purple-600 text-white font-semibold py-3 rounded-md">Acessar Santuário</a>
+            </div>
+
         </main>
         
         <footer class="text-center mt-12">
