--- a/Site/siteV1.1.html
+++ b/Site/siteV1.1.html
@@ -44,6 +44,10 @@
 </head>
 <body class="bg-black text-gray-300">
 
+    <div class="fixed top-4 left-4 z-50">
+        <a href="../../main.html" class="btn-primary">Voltar para o Portal</a>
+    </div>
+
     <!-- HERO SECTION -->
     <header id="home" class="hero-bg h-screen flex items-center justify-center text-white">
         <div class="text-center bg-black bg-opacity-60 p-10 rounded-lg">
