--- a/main.html
+++ b/main.html
@@ -114,6 +114,12 @@
                 <a href="Dados/dados.html" class="btn-theme mt-auto block w-full text-center bg-indigo-700 hover:bg-indigo-600 text-white font-semibold py-3 rounded-md">Rolar os Dados</a>
             </div>
             
+            <div class="resource-card rounded-lg p-6 flex flex-col">
+                <h2 class="text-2xl font-bold text-white mb-3">Gerenciador de Itens</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Cadastre, organize e consulte os itens dos personagens de forma individual e segura.</p>
+                <a href="items.html" class="btn-theme mt-auto block w-full text-center bg-green-700 hover:bg-green-600 text-white font-semibold py-3 rounded-md">Acessar Inventário</a>
+            </div>
+
             <div class="resource-card rounded-lg p-6 flex flex-col relative overflow-hidden">
                 <h2 class="text-2xl font-bold text-white mb-3">Manutenção</h2>
                 <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de manutenção para a campanha, incluindo mapas, cofres e arquivos de inteligência.</p>
