--- a/items.html
+++ b/items.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Itens - Kuar-Tor</title>
+    <title>Inventário por Personagem - Kuar-Tor</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -23,11 +24,11 @@
             border: 1px solid rgba(220, 38, 38, 0.2);
             box-shadow: 0 0 15px rgba(220, 38, 38, 0.2);
         }
-        .form-input {
+        .form-input, .form-select {
             background-color: #1f2937;
             border: 1px solid #4b5563;
         }
-        .form-input:focus {
+        .form-input:focus, .form-select:focus {
             border-color: #ef4444;
             box-shadow: 0 0 0 2px #ef444460;
             outline: none;
@@ -44,41 +45,63 @@
         .btn:hover {
             background-color: #dc2626;
         }
+        .btn:disabled {
+            background-color: #4b5563;
+            cursor: not-allowed;
+        }
     </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
     <div class="main-container w-full max-w-4xl p-8 rounded-lg">
         <div class="flex justify-between items-center mb-6">
-            <h1 class="font-cinzel text-4xl text-red-500">Cadastro de Itens</h1>
-            <button id="logout-button" onclick="signOut()" class="btn" style="display: none;">Logout</button>
+            <h1 class="font-cinzel text-4xl text-red-500">Inventário de Personagem</h1>
+            <button id="logout-button" class="btn" style="display: none;">Logout</button>
         </div>
 
+        <!-- Login Prompt -->
         <div id="login-prompt" class="text-center">
-            <p class="mb-4">Por favor, faça login para continuar.</p>
-            <button onclick="signInWithGoogle()" class="btn">Login com Google</button>
+            <p class="mb-4">Por favor, faça login para acessar os inventários.</p>
+            <button id="login-button" class="btn">Login com Google</button>
         </div>
 
-        <div id="item-form" style="display: none;">
-            <h2 class="text-2xl font-cinzel text-red-400 mb-4">Adicionar Novo Item</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <input type="text" id="itemName" placeholder="Nome do Item" class="form-input w-full p-2 rounded text-white">
-                <input type="text" id="itemOwner" placeholder="Personagem" class="form-input w-full p-2 rounded text-white">
-                <textarea id="itemDescription" placeholder="Descrição" class="form-input w-full md:col-span-2 p-2 rounded text-white"></textarea>
-                <input type="number" id="itemQuantity" placeholder="Quantidade" class="form-input w-full p-2 rounded text-white" value="1">
-                <button onclick="addItem()" class="btn md:col-span-2">Adicionar Item</button>
+        <!-- Main content, hidden by default -->
+        <div id="main-content" class="hidden">
+            <!-- Character Selection -->
+            <div id="character-selection" class="mb-8">
+                <h2 class="text-2xl font-cinzel text-red-400 mb-4">Selecione um Personagem</h2>
+                <div class="flex items-center space-x-4">
+                    <select id="character-dropdown" class="form-select w-full p-2 rounded text-white"></select>
+                </div>
+                <p id="no-characters-message" class="text-center text-gray-400 mt-4 hidden">
+                    Nenhum personagem encontrado. Crie um na página de <a href="Forms/formV5.html" class="text-red-400 underline hover:text-red-300">Geração de Fichas</a>.
+                </p>
             </div>
-        </div>
 
-        <div id="items-list-container" style="display: none;">
-            <h2 class="text-2xl font-cinzel text-red-400 my-4">Itens Cadastrados</h2>
-            <div id="items-list" class="space-y-4">
-                <!-- Itens serão adicionados aqui via JavaScript -->
+            <!-- Character-specific content, hidden until a character is selected -->
+            <div id="character-content" class="hidden">
+                <!-- Item Form -->
+                <div id="item-form" class="mb-8">
+                    <h2 class="text-2xl font-cinzel text-red-400 mb-4">Adicionar Novo Item</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <input type="text" id="itemName" placeholder="Nome do Item" class="form-input w-full p-2 rounded text-white">
+                        <textarea id="itemDescription" placeholder="Descrição" class="form-input w-full md:col-span-2 p-2 rounded text-white h-24"></textarea>
+                        <input type="number" id="itemQuantity" placeholder="Quantidade" class="form-input w-full p-2 rounded text-white" value="1" min="1">
+                        <button id="add-item-button" class="btn md:col-span-2">Adicionar Item</button>
+                    </div>
+                </div>
+
+                <!-- Items List -->
+                <div>
+                    <h2 class="text-2xl font-cinzel text-red-400 mb-4">Itens de <span id="character-name-display"></span></h2>
+                    <div id="items-list" class="space-y-4">
+                        <!-- Itens serão adicionados aqui via JavaScript -->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <script src="firebase-config.js"></script>
-    <script src="auth.js"></script>
     <script src="items.js"></script>
 </body>
 </html>
