--- a/Site/siteV1.1.html
+++ b/Site/siteV1.1.html
@@ -44,10 +44,6 @@
 </head>
 <body class="bg-black text-gray-300">
 
-    <div class="fixed top-4 left-4 z-50">
-        <a href="../../main.html" class="btn-primary">Voltar para o Portal</a>
-    </div>
-
     <!-- HERO SECTION -->
     <header id="home" class="hero-bg h-screen flex items-center justify-center text-white">
         <div class="text-center bg-black bg-opacity-60 p-10 rounded-lg">
@@ -64,7 +60,7 @@
                 <h2 class="text-4xl text-red-500 mb-6">Uma Ilha Envolta em Mistério</h2>
                 <div class="w-24 h-1 bg-red-700 mx-auto mb-10 rounded"></div>
                 <p class="text-lg leading-relaxed">
-                    Kuar-Tor, outrora um próspero centro de inovação e poder, governado pelas três grandes famílias - os inventores Xang, os magos Yang e os guerreiros Zahu - sucumbiu a uma catástrofe. Uma fenda para o Vazio foi aberta, corrompendo a terra e seus habitantes. Agora, apenas o silêncio e uma sinistra névoa escarlate reinam.
+                    Kuar-Tor, outrora um próspero centro de inovação e poder, governado pelas três grandes famílias - os inventores Xang, os magos Yang e os guerreiros Zhauw - sucumbiu a uma catástrofe. Uma fenda para o Vazio foi aberta, corrompendo a terra e seus habitantes. Agora, apenas o silêncio e uma sinistra névoa escarlate reinam.
                 </p>
                 <p class="text-lg mt-4 leading-relaxed">
                     Duas expedições falharam em reconquistar a ilha. Vocês são a terceira e última esperança. Uma coleção de párias, criminosos e heróis esquecidos, enviados em uma missão suicida para fechar a fenda ou morrer tentando. O destino de Kuar-Tor, e talvez do mundo, repousa sobre seus ombros.
@@ -97,7 +93,7 @@
                         <h4 class="text-2xl text-red-400 mb-3">Inspirações de Background</h4>
                         <p class="mb-4">Quem é você? Considere estas origens:</p>
                         <ul class="list-disc list-inside space-y-2 text-lg">
-                            <li><strong>Descendente de um Clã Caído:</strong> Você carrega o legado dos Xang, Yang ou Zahu? Busca restaurar a honra da sua família, dominar suas artes ancestrais ou simplesmente sobreviver com as habilidades que herdou?</li>
+                            <li><strong>Descendente de um Clã Caído:</strong> Você carrega o legado dos Xang, Yang ou Zhauw? Busca restaurar a honra da sua família, dominar suas artes ancestrais ou simplesmente sobreviver com as habilidades que herdou?</li>
                             <li><strong>Pária da Expedição:</strong> Você é um criminoso cuja sentença foi comutada por esta missão suicida? Um herói esquecido buscando um último ato de bravura? Ou um soldado sem pátria que encontrou um novo propósito nesta causa desesperada?</li>
                             <li><strong>O Voluntário Idealista:</strong> Você não foi forçado, nem condenado. Você escolheu estar aqui. Talvez por um senso de dever, por acreditar que Kuar-Tor pode ser salva, ou por uma busca pessoal que o levou a este lugar amaldiçoado. Sua motivação é pura, mas será que ela sobreviverá ao horror do Vazio?</li>
                         </ul>
@@ -131,7 +127,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-12 items-center">
                     <!-- Imagem do Juiz -->
                     <div class="md:col-span-1 flex justify-center">
-                        <img src="Juiz.jpg" alt="Juiz das quatros faces" class="rounded-lg shadow-lg shadow-red-900/50 border-2 border-red-800 max-w-xs w-full">
+                        <img src="https://i.imgur.com/8Y2Z1Jc.png" alt="Juiz das quatro faces" class="rounded-lg shadow-lg shadow-red-900/50 border-2 border-red-800 max-w-xs w-full" onerror="this.onerror=null;this.src='https://placehold.co/400x500/1a1a1a/ef4444?text=Juiz';">
                     </div>
 
                     <!-- Texto e Perguntas -->
@@ -164,42 +160,6 @@
                             </li>
                         </ul>
                          <p class="mt-6 font-bold italic">"Suas respostas definirão sua ficha, seu lugar nesta expedição e, talvez, seu fim. Preparem-se. O Julgamento começou."</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <hr class="section-divider max-w-4xl mx-auto">
-
-        <!-- BESTIÁRIO -->
-        <section id="bestiario" class="py-20 px-6 bg-black">
-            <div class="max-w-6xl mx-auto">
-                <h2 class="text-4xl text-center text-red-500 mb-6">Horrores do Vazio</h2>
-                <div class="w-24 h-1 bg-red-700 mx-auto mb-12 rounded"></div>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Criatura 1 -->
-                    <div class="card-bg rounded-lg p-6 flex flex-col items-center text-center">
-                        <img src="https://placehold.co/400x300/1a1a1a/ef4444?text=Devorador" alt="Imagem de uma criatura sombria com garras" class="rounded-lg mb-4">
-                        <div class="mt-auto">
-                            <h3 class="text-2xl text-red-400 mb-2">Devorador da Névoa</h3>
-                            <p>Uma besta de caça que se esconde na névoa escarlate. Rápida, silenciosa e mortal, ela drena a vitalidade de suas vítimas antes de desferir o golpe final.</p>
-                        </div>
-                    </div>
-                    <!-- Criatura 2 -->
-                    <div class="card-bg rounded-lg p-6 flex flex-col items-center text-center">
-                        <img src="https://placehold.co/400x300/1a1a1a/ef4444?text=Abominação" alt="Imagem de uma massa de carne e tentáculos" class="rounded-lg mb-4">
-                        <div class="mt-auto">
-                            <h3 class="text-2xl text-red-400 mb-2">Abominação Instável</h3>
-                            <p>Uma massa disforme de carne e tentáculos. Seus ataques são imprevisíveis, e sua mera presença distorce a realidade, causando alucinações e loucura.</p>
-                        </div>
-                    </div>
-                    <!-- Criatura 3 -->
-                    <div class="card-bg rounded-lg p-6 flex flex-col items-center text-center">
-                        <img src="https://placehold.co/400x300/1a1a1a/ef4444?text=Sentinela" alt="Imagem de um golem de pedra com runas brilhantes" class="rounded-lg mb-4">
-                        <div class="mt-auto">
-                            <h3 class="text-2xl text-red-400 mb-2">Sentinela da Fenda</h3>
-                            <p>Um guardião que emana energia do Vazio. Dispara raios necróticos e resiste a magias, protegendo os pontos focais da influência da fenda na ilha.</p>
-                        </div>
                     </div>
                 </div>
             </div>
