--- a/main.html
+++ b/main.html
@@ -97,6 +97,12 @@
                 <a href="santuario.html" class="btn-theme mt-auto block w-full text-center bg-teal-700 hover:bg-teal-600 text-white font-semibold py-3 rounded-md">Entrar no Santuário</a>
             </div>
 
+            <div class="resource-card rounded-lg p-6 flex flex-col">
+                <h2 class="text-2xl font-bold text-white mb-3">O Nexo</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acesse o ponto de encontro social, onde missões são aceitas, rumores são ouvidos e a sorte é testada.</p>
+                <a href="nexo.html" class="btn-theme mt-auto block w-full text-center bg-purple-700 hover:bg-purple-600 text-white font-semibold py-3 rounded-md">Entrar no Nexo</a>
+            </div>
+
             <div class="resource-card rounded-lg p-6 flex flex-col relative overflow-hidden">
                 <h2 class="text-2xl font-bold text-white mb-3">Manutenção</h2>
                 <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de manutenção para a campanha, incluindo mapas, cofres e arquivos de inteligência.</p>
