--- a/nexo.html
+++ b/nexo.html
@@ -6,6 +6,8 @@
     <title>Nexo do Paradoxo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -83,6 +85,11 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #6366f1;
         }
+ </style>
+ <script src="./firebase-config.js"></script>
+ <script>
+  const app = firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
     </style>
 </head>
 <body class="min-h-screen p-4 sm:p-6 lg:p-8">
