--- a/nexo.html
+++ b/nexo.html
@@ -260,33 +260,13 @@
                         <div class="card-content flex flex-col h-full items-center justify-center text-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" /></svg>
                             <h3 class="text-2xl font-cinzel text-gray-500 mb-2">${comodo.nome}</h3>
-                            <p class="text-gray-400 mb-4">Bloqueado</p>
-                            <button class="btn-primary text-white font-bold py-2 px-6 rounded-lg w-full btn-desbloquear" data-id="${comodo.id}">
-                                Desbloquear
-                            </button>
+                            <p class="text-gray-400 mb-2">Bloqueado</p>
+                            <p class="text-gray-400 text-sm">Custo: ${comodo.custo}</p>
                         </div>
                     `;
                 }
                 comodosGrid.appendChild(card);
             });
-            
-            // Adiciona os event listeners aos novos botões
-            document.querySelectorAll('.btn-desbloquear').forEach(btn => {
-                btn.addEventListener('click', (e) => {
-                    e.stopPropagation();
-                    desbloquearComodo(e.target.dataset.id);
-                });
-            });
-        }
-
-        /** Lógica para desbloquear um cômodo */
-        function desbloquearComodo(comodoId) {
-            const comodo = gameState.comodos.find(c => c.id === comodoId);
-            if (!comodo) return;
-
-            comodo.disponivel = true;
-            adicionarLog(`Cômodo "${comodo.nome}" desbloqueado com sucesso!`, 'sucesso');
-            renderizarComodos();
         }
 
         /** Abre e popula o modal de ações */
