--- a/main.html
+++ b/main.html
@@ -104,9 +104,9 @@
             </div>
 
             <div class="resource-card rounded-lg p-6 flex flex-col relative overflow-hidden">
-                <h2 class="text-2xl font-bold text-white mb-3">Manutenção</h2>
-                <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de manutenção para a campanha, incluindo mapas, cofres e arquivos de inteligência.</p>
-                <a href="Rascunhos/manu.html" class="btn-theme mt-auto block w-full text-center bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-md">Acessar Manutenção</a>
+                <h2 class="text-2xl font-bold text-white mb-3">Computador de Kuar-Tor</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de inteligência da campanha, incluindo mapas, cofres e arquivos de Kuar-Tor.</p>
+                <a href="computador_de_kuar_tor.html" class="btn-theme mt-auto block w-full text-center bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-md">Acessar Computador</a>
             </div>
         </main>
         
