--- a/main.html
+++ b/main.html
@@ -102,6 +102,12 @@
                 <p class="text-gray-400 mb-6 flex-grow">Acesse ferramentas e recursos de inteligência da campanha, incluindo mapas, cofres e arquivos de Kuar-Tor.</p>
                 <a href="computador_de_kuar_tor.html" class="btn-theme mt-auto block w-full text-center bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-md">Acessar Computador</a>
             </div>
+
+            <div class="resource-card rounded-lg p-6 flex flex-col">
+                <h2 class="text-2xl font-bold text-white mb-3">Mesa de Operações</h2>
+                <p class="text-gray-400 mb-6 flex-grow">Acompanhe o andamento das missões e o status dos operativos em tempo real.</p>
+                <a href="Rascunhos/mesa_oper.html" class="btn-theme mt-auto block w-full text-center bg-red-800 hover:bg-red-700 text-white font-semibold py-3 rounded-md">Acessar Mesa</a>
+            </div>
         </main>
         
         <footer class="text-center mt-12">
